--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	Fixed requirements
 
 0.001     2012-01-17 03:48:32 Europe/Berlin
 	First working version
