--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	Arghl... another requirement fix
 
 0.002     2012-01-17 04:10:01 Europe/Berlin
 	Fixed requirements
